--- a/assets/index.css
+++ b/assets/index.css
@@ -2,6 +2,13 @@ body {
 	background-color: #F6F6F6;
 }
 
+[class*="span"] {
+	float: left;
+	min-height: 1px;
+	margin-left: 0px;
+}
+
+
 #wrapper {
 	width:960px;
 	margin:10px auto 20px;
@@ -244,6 +251,131 @@ body {
 	border-radius: 4px 0 0 4px;
 }
 
+
+/* 产品详情页 */
+
+.goods-details {
+	display: block;
+	padding-top: 10px;
+	padding-left: 2px;
+	padding-bottom: 10px;
+	background-color: #FFFFFF;
+}
+.clearfloat{
+	clear: both;
+}
+
+.img-area {
+	float: left;
+	background-color:	#f4f4f4;
+}
+
+.info-area {
+	padding-left: 10px;
+}
+
+.goods-title {
+	font-size: 20px;
+	line-height: 34px;
+	height: 34px;
+	overflow: hidden;
+	color:#444;
+	font-weight: 400;
+}
+
+.coupon-info{
+	padding-top: 20px;
+	height: 81px;
+	border-top: 1px solid #eee;
+}
+
+.goods-price-area {
+	float: left;
+}
+
+.zk-price{
+	display: block;
+	font-size: 16px;
+	line-height: 30px;
+	height: 30px;
+	color:#999;
+}
+.discounted{
+	position: relative;
+	display: block;
+	font-family: Arial;
+	color:#ff464e;
+	font-size: 20px;
+	line-height: 40px;
+	font-weight: 700;
+}
+
+.buy-now{
+	float: right;
+	width: 230px;
+	height: 84px;
+}
+
+.buy-now a{
+	position: relative;
+	display: block;
+	width: 214px;
+	height: 52px;
+	background-color:			#ff464e;
+	font-size: 20px;
+	line-height: 48px;
+	color:			#fff;
+	font-weight: 700;
+	margin-left: 5px;
+	text-align: center;
+}
+
+.shop-info{
+	display: block;
+	padding-top: 20px;
+	height: 81px;
+	border-top: 1px solid #eee;
+}
+
+.shop-title {
+	display: block;
+	font-size: 16px;
+	font-weight: bold;
+	line-height: 30px;
+	height: 30px;
+	color: #ff464e;
+}
+.sold30 {
+	display: block;
+	font-size: 16px;
+	font-weight: bold;
+	line-height: 30px;
+	height: 30px;
+	color: #ff464e;
+}
+
+
+.goods-imgs {
+	margin-top:20px;
+	padding-top:10px;
+	padding-left:20px;
+	padding-right: 20px;
+	background-color: #FFFFFF;
+}
+.goods-img {
+	margin-bottom: 10px;
+}
+
+
+.guess-area {
+	margin-left:8px;
+}
+.guess {
+	background-color: #FFFFFF;
+	margin-bottom: 10px;
+	padding:3px;
+	display: block;
+}
 
 /* 翻页 */
 .pagenav_wrapper {
