--- a/assets/index.css
+++ b/assets/index.css
@@ -226,21 +226,12 @@ body {
 	border-radius: 4px;
 	overflow:hidden;
 }
-.goods .buy-area .coupon-type {
+
+.goods:hover .buy-area .btn-title {
 	display: block;
-	float: left;
-	width:38px;
-	margin:1px 0 1px 1px;
-	height: 30px;
-	background-color: #fff;
-	text-align: center;
-	font-size: 12px;
-	line-height: 30px;
-	color: #ff464e;
-	border-radius: 4px 0 0 4px;
 }
 .goods .buy-area .btn-title {
-	display: block;
+	display: none;
 	float: left;
 	height: 30px;
 	width:38px;
@@ -257,7 +248,7 @@ body {
 .goods-details {
 	display: block;
 	padding-top: 10px;
-	padding-left: 2px;
+	padding-left: 8px;
 	padding-bottom: 10px;
 	background-color: #FFFFFF;
 }
@@ -321,7 +312,7 @@ body {
 	display: block;
 	width: 214px;
 	height: 52px;
-	background-color:			#ff464e;
+	background-color:#ff464e;
 	font-size: 20px;
 	line-height: 48px;
 	color:			#fff;
@@ -332,26 +323,25 @@ body {
 
 .shop-info{
 	display: block;
-	padding-top: 20px;
+	padding-top: 10px;
 	height: 81px;
 	border-top: 1px solid #eee;
 }
-
-.shop-title {
-	display: block;
-	font-size: 16px;
-	font-weight: bold;
-	line-height: 30px;
-	height: 30px;
-	color: #ff464e;
+.shop-info .itemview {
+	margin-top:2px;
+	margin-left: 5px;
 }
-.sold30 {
-	display: block;
-	font-size: 16px;
-	font-weight: bold;
-	line-height: 30px;
-	height: 30px;
+.shop-info .tname {
+	display:inline-block;
+	font-size: 15px;
+	line-height: 21px;
+}
+.shop-info .tval{
+	display:inline-block;
 	color: #ff464e;
+	margin-left: 11px;
+	font-size: 15px;
+	line-height: 21px;
 }
 
 
@@ -375,6 +365,20 @@ body {
 	margin-bottom: 10px;
 	padding:3px;
 	display: block;
+	border:1px dotted black;
+}
+
+.guess p{
+	margin-top:8px;
+}
+
+.guess a{
+	color: #444;
+}
+
+.guess a:hover{
+	color: #ff464e;
+	text-decoration: none;
 }
 
 /* 翻页 */
