--- a/assets/index.css
+++ b/assets/index.css
@@ -166,13 +166,11 @@ body {
 
 .goods .info {
 	height: 35px;
-	padding: 4px 0 10px;
 	display: block;
 }
 
 .goods .price-area {
 	float: left;
-	width: 110px;
 	padding-left: 5px;
 }
 
@@ -205,8 +203,8 @@ body {
 
 .goods .buy-area {
 	display: block;
-	float: right;
-	margin: 0 10px 0 0;
+	position: absolute;
+	right: 25px;
 	background-color: #ff464e;
 	border-radius: 4px;
 	overflow:hidden;
@@ -217,7 +215,6 @@ body {
 }
 .goods .buy-area .btn-title {
 	display: none;
-	float: left;
 	height: 30px;
 	width:38px;
 	line-height: 30px;
