--- a/assets/index.css
+++ b/assets/index.css
@@ -371,32 +371,9 @@ body {
 }
 
 /* 翻页 */
-.pagenav_wrapper {
-	text-align:center;
+.pagination-new {
+	margin: 3px auto;
 }
-.pagenav {clear: both;
-text-align: center;
-display: inline-block;
-height: 24px;
-padding: 5px 0;
-background-color: #EAEAEC;
-border-radius: 5px;
-box-shadow: inset 0 2px 1px 0 #BBB,0 1px 1px 0 white;}
-
-.pagenav a, .pagenav strong {display: inline-block;margin:0 2px;
-zoom: 1;
-text-decoration: none;
-text-align: center;
-font-weight: bold;
-border: 1px solid #FCFCFC;
-height: 22px;
-line-height: 22px;
-padding: 0 8px;
-border-radius: 3px;
-background: white;
-box-shadow: 0 2px 3px 0 #CCC;}
-.pagenav a {color:#666;}
-.pagenav strong {color:#53b348;}
 
 /* =Footer
 -------------------------------------------------------------- */
