--- a/assets/index.css
+++ b/assets/index.css
@@ -53,6 +53,10 @@ body {
 	right:10px;
 }
 
+.logo-img {
+	height: 46px;
+}
+
 /* 主导航 */
 .navbar-style {
 	background-color: red;
@@ -129,7 +133,6 @@ body {
 }
 .goods {
 	float:left;
-	margin:0 0px 10px;
 	padding:5px;
 }
 .goods .goods-pic {
@@ -169,6 +172,7 @@ body {
 	max-width: 100%;
 	text-overflow: ellipsis;
 	white-space: nowrap;
+	font-size: 0.9rem;
 }
 
 .goods .shop-type {
@@ -188,7 +192,7 @@ body {
 	font-size: 12px;
 	color: #999;
 	line-height: 17px;
-	padding: 15px 10px 0;
+	padding: 0px 10px 0;
 }
 
 .goods .raw-price-area .sold {
@@ -198,6 +202,7 @@ body {
 .goods .info {
 	height: 35px;
 	display: block;
+	padding: 0px 10px 0;
 }
 
 .goods .price-area {
@@ -261,7 +266,6 @@ body {
 .goods-details {
 	display: block;
 	padding-top: 10px;
-	padding-left: 8px;
 	padding-bottom: 10px;
 	background-color: #FFFFFF;
 }
@@ -271,6 +275,7 @@ body {
 
 .img-area {
 	float: left;
+	text-align: center;
 }
 
 .info-area {
@@ -316,14 +321,12 @@ body {
 
 .buy-now{
 	float: right;
-	width: 230px;
-	height: 84px;
 }
 
 .buy-now a{
 	position: relative;
 	display: block;
-	width: 214px;
+	width: 200px;
 	height: 52px;
 	background-color:#ff464e;
 	font-size: 20px;
@@ -384,6 +387,7 @@ body {
 	background-color: #FFFFFF;
 	margin-bottom: 10px;
 	padding:3px;
+	float: left;
 	display: block;
 	border:1px dotted black;
 }
