edit page guess_like

--- a/assets/index.css
+++ b/assets/index.css
@@ -393,7 +393,10 @@ body {
 }
 
 .guess p{
-	margin-top:8px;
+	margin: 4px auto 4px;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
 
 .guess a{
