keyword list a style and goods page weixin

--- a/assets/index.css
+++ b/assets/index.css
@@ -26,6 +26,10 @@ body {
 	white-space: nowrap;
 }
 
+.keyword-list a:hover{
+	text-decoration: none;
+}
+
 
 /* =Header
 -------------------------------------------------------------- */
